Fix collapse and background bugs

--- a/src/sass/components/AccountContainer.sass
+++ b/src/sass/components/AccountContainer.sass
@@ -25,4 +25,6 @@
 .accounts-details-container
     border: 1px solid #e9ecf5
     border-radius: 4px
-    margin: 15px 19.5px 0px 19.5px
+
+.accounts-content-container
+    padding: 15px 19.5px 0px
