--- a/src/sass/components/App.sass
+++ b/src/sass/components/App.sass
@@ -1,7 +1,7 @@
 body
   height: 100%
   background-size: cover
-  background-color: #F5F7FD
+  background-color: #F5F7FD !important
 
 html
   height: 100%
